syntax = "proto3";

option java_multiple_files = true;

package mnm.sep3;

option csharp_namespace = "GrpcClient";

message Empty {

}

message UserDTO {
  string username = 1;
  string password = 2;
  int32 id = 3;
}

message QuizDTO {
  int32 id = 1;
  string title = 2;
  int32 creatorId = 3;
  string visibility = 4;
}

message QuestionDTO {
  int32 id = 1;
  string title = 2;
  int32 index = 3;
  int32 quizId = 4;
}

message AnswerDTO {
  int32 id = 1;
  string title = 2;
  int32 index = 3;
  int32 questionId = 4; // Evt lav en repeated AnswerDTO variable p√• question i stedet for
  bool isCorrect = 5;
}